<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/titleText"
        android:gravity="center_horizontal"
        android:layout_margin="15dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        android:hint="@string/startText"
        android:id="@+id/startDate"
        android:layout_margin="15dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/startDate"
        android:hint="@string/endText"
        android:id="@+id/endDate"
        android:layout_margin="15dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/endDate"
        android:hint="@string/nameText"
        android:id="@+id/nameEvent"
        android:layout_margin="15dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nameEvent"
        android:hint="@string/personText"
        android:id="@+id/personEvent"
        android:layout_margin="15dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/personEvent"
        android:hint="@string/descrText"
        android:id="@+id/descrEvent"
        android:layout_margin="15dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/descrEvent"
        android:text="@string/writeText"
        android:layout_margin="15dp"
        android:id="@+id/writeButton"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/writeButton"
        android:text="@string/actButtonText"
        android:layout_margin="15dp"
        android:id="@+id/activityButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>